--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 								<li><a href="#contact">Contact Me</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul><br>
-							<a href="resume.pdf" class="btn-secondary">Download Resume</a>
+							<a href="https://github.com/DhairyaGogri/DhairyaGogri.github.io/raw/main/assets/resume.pdf" download ="Dhairya_Gogri_resume.pdf">Download Resume</a>
+
 						</nav>
 						</div>
 					</header>
